TASK: Rename displayCurrentDay
It was just an illogical name

--- a/app/src/main/res/xml/preferences_main.xml
+++ b/app/src/main/res/xml/preferences_main.xml
@@ -30,7 +30,7 @@
 
         <SwitchPreference
             android:defaultValue="true"
-            android:key="displayCurrentDay"
+            android:key="displayPastDays"
             android:summary="@string/settings_past_days_summary"
             android:title="@string/settings_past_days_title" />
 
