TASK: Remove Maxlines since it can lead to bugs

--- a/app/src/main/res/layout/view_spinner_dropdown_item.xml
+++ b/app/src/main/res/layout/view_spinner_dropdown_item.xml
@@ -6,6 +6,6 @@
     android:layout_height="wrap_content"
     android:ellipsize="marquee"
     android:gravity="center"
-    android:maxLines="1"
+    android:singleLine="true"
     android:padding="10dp"
     android:textColor="@android:color/black" />
