--- a/app/src/main/res/layout/layout_empty.xml
+++ b/app/src/main/res/layout/layout_empty.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="15dp">
 
     <TextView
+        android:id="@+id/empty_item_message"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:id="@+id/empty_item_message"
-        android:textSize="20sp"
-        android:text="@string/no_data_to_display"/>
+        android:text="@string/no_data_to_display"
+        android:textSize="20sp" />
 
 </FrameLayout>
