--- a/app/src/main/res/layout/view_date_heading.xml
+++ b/app/src/main/res/layout/view_date_heading.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/heading_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
-    >
+    android:paddingBottom="10dp"
+    android:paddingTop="10dp">
 
     <TextView
         android:id="@+id/heading_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:includeFontPadding="false"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
         android:textSize="20sp"
         android:textStyle="bold"
-        tools:text="Date_text"
-        android:includeFontPadding="false"/>
+        tools:text="Date_text" />
 
     <include
         layout="@layout/tag"
@@ -26,6 +25,7 @@
         android:layout_height="25dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
+        android:layout_marginEnd="25dp"
         android:layout_marginRight="25dp" />
 
 
