--- a/app/src/main/res/layout/tag.xml
+++ b/app/src/main/res/layout/tag.xml
@@ -19,8 +19,8 @@
         android:maxHeight="20dp"
         android:singleLine="true"
         android:text="A"
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
+        android:textColor="@android:color/white"
+        android:textSize="16sp"
         tools:text="A" />
 
 </RelativeLayout>
