--- a/app/src/main/res/xml/preferences_main.xml
+++ b/app/src/main/res/xml/preferences_main.xml
@@ -40,6 +40,12 @@
             android:summary="@string/colored_cards_summary"
             android:title="@string/colored_cards_title" />
 
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="showWeekIndicator"
+            android:summary="@string/settings_weekIndicator_summary"
+            android:title="@string/settings_weekIndicator_title" />
+
         <com.thebluealliance.spectrum.SpectrumPreference
             android:defaultValue="@color/colorPrimary"
             android:key="color"
