--- a/app/src/main/res/xml/preferences_main.xml
+++ b/app/src/main/res/xml/preferences_main.xml
@@ -22,12 +22,7 @@
 
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/settings_section_miscellaneous">
-
-        <PreferenceScreen android:title="@string/settings_notification_title">
-            <intent android:action=".EINSTELLUNGEN" />
-        </PreferenceScreen>
-
+    <PreferenceCategory android:title="@string/settings_section_display">
         <SwitchPreference
             android:defaultValue="true"
             android:key="displayPastDays"
@@ -52,6 +47,25 @@
             android:summary="@string/settings_app_color_summary"
             android:title="@string/settings_app_color_title"
             app:spectrum_colors="@array/theme_picker" />
+    </PreferenceCategory>
+
+    <PreferenceCategory android:title="@string/settings_section_miscellaneous">
+
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="notification"
+            android:title="@string/settings_notification_title" />
+
+        <ListPreference
+            android:defaultValue="3600000"
+            android:dialogTitle="@string/settings_notification_interval_dialog_title"
+            android:entries="@array/Intervall"
+            android:entryValues="@array/Intervall_values"
+            android:key="AbrufIntervall"
+            android:negativeButtonText="@string/settings_notification_interval_dialog_back"
+            android:persistent="true"
+            android:summary="@string/settings_notification_interval_summary"
+            android:title="@string/settings_notification_interval_title" />
 
     </PreferenceCategory>
 </PreferenceScreen>
