TASK: Set tag color to blue and add other colors as comment

--- a/app/src/main/res/drawable/tag_background.xml
+++ b/app/src/main/res/drawable/tag_background.xml
@@ -5,5 +5,9 @@
         android:width="15dp"
         android:height="15dp" />
 
-    <solid android:color="?attr/colorPrimary" />
+    <solid android:color="#1E88E5" />
+    <!-- #1E88E5 -->
+    <!-- #BCAAA4 -->
+    <!-- #BDBDBD -->
+    <!-- #9E9E9E -->
 </shape>
