--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,8 @@
     <color name="textColor">#FAFAFA</color>
     <color name="textColorInverse">#0e0e0e</color>
 
-    <color name="Schrift1">#424242</color>
-    <color name="Schrift2">#5c5c5c</color>
+    <color name="lightTextColor">#5c5c5c</color>
+    <color name="lightTextColor2">#424242</color>
 
     <color name="reallyLightGrey">#f5f5f5</color>
 
