--- a/app/src/main/res/values/alertDialogStyle.xml
+++ b/app/src/main/res/values/alertDialogStyle.xml
@@ -9,4 +9,14 @@
         <item name="android:windowMinWidthMinor">@android:dimen/dialog_min_width_minor</item>
         <item name="android:textColor">@android:color/black</item>
     </style>
+
+    <style name="AlertDialogThemeDark" parent="Theme.AppCompat.Dialog.Alert">
+        <item name="android:windowBackground">@color/darkBackground</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
+        <item name="android:windowMinWidthMajor">@android:dimen/dialog_min_width_major</item>
+        <item name="android:windowMinWidthMinor">@android:dimen/dialog_min_width_minor</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
