--- a/app/src/main/res/layout/layout_settings.xml
+++ b/app/src/main/res/layout/layout_settings.xml
@@ -6,7 +6,7 @@
     android:fitsSystemWindows="true"
     app:theme="@style/AppTheme.Light.NoActionBar">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -14,7 +14,7 @@
         app:navigationIcon="?attr/homeAsUpIndicator"
         app:theme="@style/AppTheme.Light.NoActionBar">
 
-    </android.support.v7.widget.Toolbar>
+    </androidx.appcompat.widget.Toolbar>
 
     <FrameLayout
         android:id="@+id/content"
