--- a/app/src/main/res/layout/view_no_info_card.xml
+++ b/app/src/main/res/layout/view_no_info_card.xml
@@ -8,7 +8,7 @@
     android:layout_marginRight="4dp"
     android:padding="2dp">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -32,5 +32,5 @@
 
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
