--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,8 +12,8 @@
 
     <color name="reallyLightGrey">#f5f5f5</color>
 
-    <color name="disabled">#a0a0a0</color>
-    <color name="disabled2">#bababa</color>
+    <color name="disabled">#bababa</color>
+    <color name="disabled_darker">#a0a0a0</color>
 
     <color name="colorPrimary">#757575</color>
     <color name="colorPrimaryDark">#616161</color>
