--- a/app/src/main/res/layout/tag.xml
+++ b/app/src/main/res/layout/tag.xml
@@ -18,7 +18,7 @@
         android:lines="1"
         android:maxHeight="20dp"
         android:singleLine="true"
-        android:text="A"
+        android:text="@string/AB_week_default"
         android:textColor="@android:color/white"
         android:textSize="16sp"
         tools:text="A" />
