FIX: Wrong default value for week indicator

--- a/app/src/main/res/xml/preferences_main.xml
+++ b/app/src/main/res/xml/preferences_main.xml
@@ -36,7 +36,7 @@
             android:title="@string/colored_cards_title" />
 
         <SwitchPreference
-            android:defaultValue="false"
+            android:defaultValue="true"
             android:key="showWeekIndicator"
             android:summary="@string/settings_weekIndicator_summary"
             android:title="@string/settings_weekIndicator_title" />
