--- a/app/src/main/res/xml/preferences_main.xml
+++ b/app/src/main/res/xml/preferences_main.xml
@@ -56,5 +56,11 @@
             android:key="notification"
             android:title="@string/settings_notification_title" />
 
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="show_detailed_notifications"
+            android:title="@string/show_detailed_notifications_title"
+            android:summary="@string/show_detailed_notifications_summary"/>
+
     </PreferenceCategory>
 </PreferenceScreen>
