--- a/app/src/main/res/xml/preferences_main.xml
+++ b/app/src/main/res/xml/preferences_main.xml
@@ -62,5 +62,11 @@
             android:title="@string/show_detailed_notifications_title"
             android:summary="@string/show_detailed_notifications_summary"/>
 
+        <SwitchPreference
+            android:defaultValue="false"
+            android:key="logToFile"
+            android:title="@string/logging_title"
+            android:summary="@string/logging_summary"/>
+
     </PreferenceCategory>
 </PreferenceScreen>
