fix(logging): make sure logging is disabled for now

--- a/app/src/main/res/xml/preferences_main.xml
+++ b/app/src/main/res/xml/preferences_main.xml
@@ -64,6 +64,7 @@
 
         <SwitchPreference
             android:defaultValue="false"
+            android:enabled="false"
             android:key="logToFile"
             android:title="@string/logging_title"
             android:summary="@string/logging_summary"/>
